# conductor

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  install.ps1  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/: conductor
.github/workflows/: ci.yml  release.yml  validate-plugin.yml
conductor-ts/: package.json  pnpm-lock.yaml  tsconfig.base.json
docker/aca-runner/: .dockerignore  Dockerfile
docs/: aca-provider-example.yaml  aca-provider.design.md  architecture-decisions.md  cli-reference.md  configuration.md  dashboard-deep-links.md  dynamic-parallel.md  mcp-tools.md  parallel-execution.md  release-checklist.md  workflow-syntax.md
docs/design/: registry.md
docs/projects/: file-tag-external-references.plan.md  planned-features-logging-redesign.plan.md  planned-features.md  script-execution-steps.plan.md
docs/proposals/: retry-route-action.md
docs/providers/: aca.md  claude.md  comparison.md  experimental.md  hermes.md  migration.md
examples/: README.md  aca-coding-agent.yaml  claude-agent-sdk-repo-qa.yaml  codex-repo-review.yaml  codex-simple.yaml  context-tier.yaml  copilot-existing-runtime.yaml  copilot-local-llm.yaml  design-review.yaml  design.yaml  dialog-mode.yaml  dialog-test.yaml  document-review.yaml  error-routing-helpers.yaml  error-routing.yaml  experimental-claude-agent-sdk.yaml  for-each-agent-attribution.yaml  for-each-simple.yaml  hermes-features.yaml  hermes-simple.yaml  hermes-toolsets.yaml  implement.yaml  implementation-plan.yaml  multi-provider-research.yaml  notifications.yaml  parallel-research.yaml  parallel-validation.yaml  periodic-checkpoints.yaml  plan.yaml  pydantic-deep-qa.yaml  reasoning-effort.yaml  research-assistant-claude.yaml  research-assistant.yaml  script-stdin.yaml  script-step.yaml  script-typed-output.yaml  set-step.yaml  simple-qa.yaml  skills-brainstorm.yaml  skills-self-improving-workflow.yaml  (+12 more)
examples/docs/: sample.plan.md
examples/openspec-superpowers/: README.md  (+3 more)
tests/: __init__.py  conftest.py  test_agent_iteration_limits.py  test_error_kinds.py  test_events.py  test_exceptions.py  test_file_string.py  test_per_agent_retry.py  test_performance.py  test_templating.py
tmp/: _dbg.yaml  pr232-reply.md  pr232-review.json
(+666 files in other folders)
